# Web-Scraping-Project-

./: README.md  main.py  pyproject.toml  replit.nix  requirements.txt  scraper.py
static/css/: style.css
static/js/: script.js
templates/: index.html  result.html
